# vulkan-tutorial-rust

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  azure-pipelines.yml  download_asset.py
assets/: .gitignore
ci/: azure-install-rust.yml  azure-steps.yml
screenshots/: .16-swapchain-recreation.png-autosave.kra
shaders/: shader.vert
shaders/spv/: 17-shader-vertexbuffer.frag.spv  17-shader-vertexbuffer.vert.spv  21-shader-ubo.vert.spv  25-shader-textures.frag.spv  25-shader-textures.vert.spv  26-shader-depth.vert.spv
shaders/src/: 09-shader-base.frag  09-shader-base.vert  17-shader-vertexbuffer.frag  17-shader-vertexbuffer.vert  21-shader-ubo.frag  21-shader-ubo.vert  21-shader-ubo.vert.spv  25-shader-textures.frag  25-shader-textures.vert  26-shader-depth.frag  26-shader-depth.vert
snapshot/: CombineImage.shadron
src/: lib.rs  utility.rs
src/imgui/: imgui.rs
src/tutorials/: 00_base_code.rs  01_instance_creation.rs  02_validation_layers.rs  03_physical_device_selection.rs  04_logical_device.rs  05_window_surface.rs  06_swap_chain_creation.rs  07_image_view.rs  08_graphics_pipeline.rs  09_shader_modules.rs  10_fixed_functions.rs  11_render_passes.rs  12_graphics_pipeline_complete.rs  13_framebuffers.rs  14_command_buffers.rs  15_hello_triangle.rs  16_swap_chain_recreation.rs  17_vertex_input.rs  18_vertex_buffer.rs  19_staging_buffer.rs  20_index_buffer.rs  21_descriptor_layout.rs  22_descriptor_sets.rs  23_texture_image.rs  24_sampler.rs  25_texture_mapping.rs  26_depth_buffering.rs  27_model_loading.rs  28_mipmapping.rs  29_multisampling.rs
src/utility/: constants.rs  debug.rs  fps_limiter.rs  mod.rs  platforms.rs  structures.rs  tools.rs  vulkan.rs  window.rs
src/utility/share/: mod.rs  v1.rs  v2.rs
